# California_House_Prediction

./: .gitignore  03_immrm_ETL.ipynb  Dockerfile  Makefile  README.md  app.py  main.py  pyproject.toml  requirements-conda.txt  requirements.txt  scaler.pkl  test_app.py
.dvc/: config
.github/workflows/: cicd.yaml
config/: config.yaml
data/processed/: processed_data.csv.dvc
data/raw/: .gitignore  housing_raw_data.csv.dvc
models/: best_model.pkl  pop_99.pkl  scaler.pkl
notebooks/: 01_immrm_EDA.ipynb  02_immrm_EDA.ipynb  demo_inference.ipynb
src/: logger.py
src/constants/: __init__.py
src/pipelines/: extract_data.py  preprocess.py  retrain_on_new_data.py  train.py
src/utils/: common.py  log_db.py
