[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "california_housing_prediction"
version = "0.0.1"
description = "A minimal end-to-end MLOps pipeline for California Housing price prediction, built as part of my Master\u2019s program assignment."
authors = [
  { name = "mehraj" },
]

readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    
]
requires-python = "~=3.10.0"

[tool.black]
line-length = 99
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.venv
)/
'''

[tool.isort]
profile = "black"
known_first_party = ["california_housing_prediction"]
force_sort_within_sections = true


